# SPIRV-Cross

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Package.swift  README.md  build_glslang_spirv_tools.sh  checkout_glslang_spirv_tools.sh  format_all.sh  main.cpp  spir2common.hpp  spir2cross.cpp  spir2cross.hpp  spir2glsl.cpp  spirv.h  spirv.hpp  spirv.hpp11  spirv_cfg.cpp  spirv_cfg.hpp  spirv_common.hpp  spirv_cpp.cpp  spirv_cpp.hpp  spirv_cross.cpp  spirv_cross.hpp  spirv_cross_c.cpp  spirv_cross_c.h  spirv_cross_containers.hpp  spirv_cross_error_handling.hpp  spirv_cross_parsed_ir.cpp  spirv_cross_parsed_ir.hpp  spirv_cross_util.cpp  spirv_cross_util.hpp  spirv_glsl.cpp  spirv_glsl.hpp  spirv_hlsl.cpp  spirv_hlsl.hpp  spirv_msl.cpp  spirv_msl.hpp  spirv_msl_vertex_loader.cpp  spirv_opencl.cpp  (+12 more)
.github/workflows/: main.yml
.reuse/: dep5
LICENSES/: Khronos.txt
gn/: BUILD.gn
include/spir2cross/: barrier.hpp  external_interface.h  image.hpp  internal_interface.hpp  sampler.hpp  thread_group.hpp
include/spirv_cross/: barrier.hpp  external_interface.h  image.hpp  internal_interface.hpp  sampler.hpp  thread_group.hpp
jni/: Android.mk
msvc/: SPIRV-Cross.sln  SPIRV-Cross.vcxproj  SPIRV-Cross.vcxproj.filters  SPIRV-CrossLib.vcxproj  SPIRV-CrossLib.vcxproj.filters  spir2cross.sln  spir2cross.vcxproj  spir2cross.vcxproj.filters
pkg-config/: spirv-cross-c.pc.in
samples/cpp/: atomics.cpp  multiply.cpp  shared.cpp
shaders-hlsl-no-opt/comp/: integer-dot-product.sm64.fxconly.nofxc.comp  subgroups.invalid.nofxc.sm60.comp
shaders-hlsl-no-opt/mesh/: clip-cull-array-load-store-single.sm65.nofxc.fxconly.spv16.mesh  clip-cull-array-load-store.sm65.nofxc.fxconly.spv16.mesh
shaders-hlsl/comp/: builtins.comp  image.comp  shared.comp  specialization-constant-workgroup.comp
shaders-hlsl/frag/: clip-cull-distance.frag  fp16.desktop.frag  resources.frag  sample-cmp-level-zero.frag  tex-sampling.frag  unorm-snorm-packing.frag  various-glsl-ops.frag
shaders-hlsl/mesh/: mesh-shader-basic-lines.spv14.vk.nocompat.mesh  mesh-shader-basic-triangle.spv14.vk.nocompat.flip-vert-y.mesh  mesh-shader-basic-triangle.spv14.vk.nocompat.mesh
shaders-hlsl/tesc/: basic.tesc
shaders-hlsl/tese/: basic.tese  input-array.tese  input-types.tese  triangle-tess-level.tese  triangle.tese
shaders-hlsl/vert/: clip-cull-distance.vert  locations.vert  matrix-attribute.vert  sampler-buffers.vert
shaders-msl-no-opt/comp/: buffer-alias.argument.msl21.comp  integer-dot-product.comp  subgroups.nocompat.invalid.vk.msl21.comp  subgroups.nocompat.invalid.vk.msl21.fixed-subgroup.comp  subgroups.nocompat.invalid.vk.msl22.ios.comp  subgroups.nocompat.invalid.vk.msl23.ios.simd.comp
shaders-msl-no-opt/frag/: image-gather.asm.frag  subgroups.nocompat.invalid.vk.msl21.frag
shaders-msl-no-opt/vert/: buffer-alias.argument-pad.msl21.vert  reversed-depth-viewport-index.emulate-reversed-depth-viewport.msl2.vert  reversed-depth-viewport.emulate-reversed-depth-viewport.vert
shaders-msl/comp/: array-length.msl2.argument.discrete.comp  copy-array-of-arrays.comp  integer-dot-product.comp  overlapping-bindings.msl31.argument.argument-tier-1.decoration-binding.device-argument-buffer.comp  overlapping-bindings.msl31.argument.argument-tier-1.decoration-binding.device-argument-buffer.texture-buffer-native.comp  raw-buffer-descriptor-aliasing.argument.discrete.device-argument-buffer.msl2.comp  ray-query-name-collision.spv14.vk.msl24.comp  ray-query-proceed-helper.spv14.vk.msl24.comp  ray-query-return-nested-array.argument.force-active.msl3.spv14.vk.comp  ray-query-return.argument.device-argument-buffer.force-active.msl3.spv14.vk.comp  ray-query-unused-resource.spv14.vk.msl3.comp  ray-query.spv14.vk.ios.msl24..invalid.comp
shaders-msl/flatten/: struct.flatten.vert  swizzle.flatten.vert
shaders-msl/frag/: argument-buffers.msl2.argument.frag  array-of-texture-swizzle.msl2.swizzle.frag  fragment.signed-mismatch.frag  mesh-shader-i64-varyings.msl3.spv14.vk.nocompat.frag  mrt-array.frag  nonuniform-qualifier.msl2.frag  rq-position-fetch.msl3.spv14.vk.frag  runtime_array_as_argument_buffer.msl3.frag
shaders-msl/geom/: basic.msl31.geom  lines.msl31.geom
shaders-msl/mesh/: basic.msl3.spv14.mesh  mesh-shader-basic-lines.msl3.spv14.vk.nocompat.mesh  mesh-shader-basic-triangle.msl3.spv14.vk.nocompat.mesh  mesh-shader-capture-replay-lines.mesh-emulation.msl3.spv14.vk.nocompat.mesh  mesh-shader-capture-replay.mesh-emulation.msl3.spv14.vk.nocompat.mesh  mesh-shader-i64-component-writes.mesh-emulation.msl3.spv14.vk.nocompat.mesh  mesh-shader-i64-varyings.mesh-emulation.msl3.spv14.vk.nocompat.mesh  mesh-shader-point.default-point-size.msl3.spv14.vk.nocompat.mesh  mesh-shader-position-fixup.fixup-clipspace.flip-vert-y.msl3.spv14.vk.nocompat.mesh  mesh-shader-task-payload-taskless.mesh-emulation.msl3.spv14.vk.nocompat.mesh
shaders-msl/rahit/: position-fetch.msl3.spv14.vk.rahit  ray-tracing-array-return.force-native-array.spv14.vk.msl24.rahit  ray-tracing.spv14.vk.msl24.rahit
shaders-msl/rcall/: execute-callable-int8.spv14.vk.msl24.rcall  execute-callable-nested-array.force-native-array.spv14.vk.msl24.rcall  incoming-callable-array-helper.force-native-array.spv14.vk.msl24.rcall  ray-tracing.spv14.vk.msl24.rcall
shaders-msl/task/: basic.msl3.spv14.task  (+2 more)
tests-other/: c_api_test.c  debug-info.cpp  debug-info.spv  debug-lines.cpp  debug-lines.spv  hlsl_resource_bindings.cpp  msl_constexpr_test.cpp  msl_constexpr_test.spv  msl_ray_tracing_array_loop_phi.spvasm  msl_ray_tracing_array_return.spvasm  msl_ray_tracing_composite_insert.spvasm  msl_ray_tracing_copy_logical.spvasm  msl_ray_tracing_fixed_array.spvasm  msl_ray_tracing_loop_phi.spvasm  msl_ray_tracing_multi_entry.spvasm  msl_ray_tracing_multidimensional_array.spvasm  msl_ray_tracing_multidimensional_resource.spvasm  msl_ray_tracing_multiway_phi.spvasm  msl_ray_tracing_native_array_return_noargs.spvasm  msl_ray_tracing_phi_copy_swap.spvasm  msl_ray_tracing_phi_extract_snapshot.spvasm  msl_ray_tracing_resource_array.cpp  msl_ray_tracing_resource_array.spvasm  small_vector.cpp
(+1933 files in other folders)
